--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,4 +30,4 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: ESPHome_Firmware
-          path: $GITHUB_WORKSPACE/.out/firmware.bin
+          path: ${{ github.workspace }}/.out/firmware.bin
